# master_src

./: .gitignore  ARCHITECTURE.md  CAPSTONE_CONTEXT.md  CLAUDE.md  README.md  TASKS.md  bashrc_backup.txt  boot_config_backup.txt  installed_packages.txt
apriltag/: package.xml  setup.cfg  setup.py
apriltag/apriltag/: apriltag.py  image_capture.py
apriltag/config/: CHANGE_ME.svm  default_cam.yaml
apriltag/launch/: vision.lauch.CHANGE_ME.py  vision.launch.py
capstone/: CONTROLLER_DOCUMENTATION.md  LICENSE  package.xml  setup.cfg  setup.py
capstone/capstone/: controller.py  flight_logger.py
capstone/launch/: sitl.launch.py
comms_interface/: package.xml  setup.cfg  setup.py
comms_interface/comms_interface/: status.py  telemetry.py
data/: apriltag_20260410_152423.csv  apriltag_20260410_153815.csv  apriltag_20260410_154049.csv
drone_interface/: setup.py
gamepad/: package.xml  setup.py
gamepad/gamepad/: gamepad.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/apriltag/share/apriltag/: package.xml
install/capstone/share/capstone/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
memory/: plan.md  research.md
move2hover/: README_FIXES.md  setup.cfg  setup.py
move2hover/move2hover/: move2hover.py
onboard/: package.xml  setup.cfg  setup.py
onboard/config/: onboard.yaml
onboard/launch/: camera_only.launch.py  onboard.launch.py
onboard/onboard/: apriltag_logger.py  precision_landing.py  tag_offset_display.py
scripts/: plot_apriltag_log.py  plot_flight_log.py  view_camera.sh
