<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onboard</name>
  <version>0.0.0</version>
  <description>Pi 4 onboard stack launch: mavros, camera_ros, apriltag_ros</description>
  <maintainer email="c26ty.hubert@afacademy.af.edu">Dr. Baek</maintainer>
  <license>Apache License 2.0</license>

  <!-- Runtime dependencies — packages launched by onboard.launch.py -->
  <exec_depend>mavros</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>image_rotate</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- precision_landing node dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
